Fix an issue causing a section to overlap intro section

--- a/css/style.css
+++ b/css/style.css
@@ -161,9 +161,9 @@ h6 {
 
 #intro {
   width: 100%;
-  height: 60vh;
+  height: 100vh;
   position: relative;
-  background: url("../img/intro-carousel/1.jpg") no-repeat;
+  background: url("../img/img-church-monoke.jpg") no-repeat;
   background-size: cover;
 }
 
